@@ -8,6 +8,7 @@ SHA256 626c06bd57765e1a6772b0d05736f4542f1fa0f8a476bced614a11065758a057 files/sg
 DIST rescan-scsi-bus.sh 5884 RMD160 3ca6340b1299fe15fa96484d6db5ea0232292aba SHA1 b7e9f35aede9364b661737ece61e702e67239d0e SHA256 14bb8550a240f5eea8047a449dc8f3c33544f45ecc83c6cbcaf7c7ff5c1227d1
 DIST sg3_utils-1.11.tgz 311124 RMD160 45c8fef1f3698948c6b25069ab4a3782fd94867d SHA1 e1ec4c1832422f3afc0aa0e877f8a4d2f3ad361b SHA256 bff5846bb30e6d24a81d42e4d81a72cc62461cce573bbefeb54078dccbf714da
 DIST sg3_utils-1.21.tgz 517302 RMD160 b16da75d3471b9b97747390cc30694f2e35d974d SHA1 284556747fa988ef530ede6cec981509377642a0 SHA256 29fd0888426530c71a45afec1db05693d441d4d7286f79ad1bfeccb6d90cff35
+DIST sg3_utils-1.22.tgz 505941 RMD160 15f3a0eea95270d1a4ea96803bd3d5f2dd3da936 SHA1 f0c5c0a1d6a9639e4d25fa7b85445c926f1a18e3 SHA256 9139435537fb1c77454301bc173407d56907ecbbbb3c75bc2c13fbd2438a7f22
 EBUILD sg3_utils-1.11.ebuild 871 RMD160 a389d29b53b61c2a04ff0b3322acc51703bda2ca SHA1 5c03a3eb5b9a3294f1c41db5fb35caf689a2d90e SHA256 43f66ad7a4ecefaf5c5e7a76d06a33d3727b6e4dee7b762de1601c6d8b251ef6
 MD5 c961881764f66b8f51ee5049c2d246fc sg3_utils-1.11.ebuild 871
 RMD160 a389d29b53b61c2a04ff0b3322acc51703bda2ca sg3_utils-1.11.ebuild 871
@@ -16,24 +17,31 @@ EBUILD sg3_utils-1.21.ebuild 1324 RMD160 3ee0ceb44dcaa2400e0401c677dfca1ea93cd34
 MD5 c1932da22af0e4d1b8be4a9592f2aa21 sg3_utils-1.21.ebuild 1324
 RMD160 3ee0ceb44dcaa2400e0401c677dfca1ea93cd34d sg3_utils-1.21.ebuild 1324
 SHA256 88db82d047e0bc85e2fe9180ec86869831a53afcddb6cb7c3d92d128101b8634 sg3_utils-1.21.ebuild 1324
-MISC ChangeLog 3264 RMD160 c7e7e6e9877dab72b17171d3bd293a5971c2db36 SHA1 a9b2ba1d18445549ea573417c06c98b7bf470b9b SHA256 fe5fa98d752e29dca685b98763539577feed4aea554defacd7aa43b6e544f9d5
-MD5 b149099a85c2a6c08b81205763e07ead ChangeLog 3264
-RMD160 c7e7e6e9877dab72b17171d3bd293a5971c2db36 ChangeLog 3264
-SHA256 fe5fa98d752e29dca685b98763539577feed4aea554defacd7aa43b6e544f9d5 ChangeLog 3264
-MISC metadata.xml 228 RMD160 5fd2e8688b03168f4534b6d2e50fa7bb8a16abe2 SHA1 74bb2dd3f708404f1e5de1a8438f207c99615123 SHA256 a9149d44e45790d278c94b4d7c79bdbb20f91fca57bc33ad67232a3bc0fe635e
-MD5 37443e54165d5bcdaa8550d52edafa98 metadata.xml 228
-RMD160 5fd2e8688b03168f4534b6d2e50fa7bb8a16abe2 metadata.xml 228
-SHA256 a9149d44e45790d278c94b4d7c79bdbb20f91fca57bc33ad67232a3bc0fe635e metadata.xml 228
+EBUILD sg3_utils-1.22.ebuild 1378 RMD160 a2eb389f0b44cd4601a738494584c1e3d36a6a5e SHA1 861881b0dff1cca696c442c54357da7d503d6740 SHA256 f50dbfa62c8e577945cbc3141fb917c18e65f735a1976bbd9ffc9527ffe67c53
+MD5 57d9a9d955c7cc3cfddff0a85f15d6a8 sg3_utils-1.22.ebuild 1378
+RMD160 a2eb389f0b44cd4601a738494584c1e3d36a6a5e sg3_utils-1.22.ebuild 1378
+SHA256 f50dbfa62c8e577945cbc3141fb917c18e65f735a1976bbd9ffc9527ffe67c53 sg3_utils-1.22.ebuild 1378
+MISC ChangeLog 3384 RMD160 279d1a76f7c6e1821802bc2e83bd6cab6e251e31 SHA1 e6842269992f922e6ae9fb82879298e545ac8148 SHA256 5fd0d3196a8f5e292c95148996f31f4da9eb80cd28c547b056527f25efae6fa6
+MD5 05f8be2b6bf50ce3b2c4a7e31a151c44 ChangeLog 3384
+RMD160 279d1a76f7c6e1821802bc2e83bd6cab6e251e31 ChangeLog 3384
+SHA256 5fd0d3196a8f5e292c95148996f31f4da9eb80cd28c547b056527f25efae6fa6 ChangeLog 3384
+MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
+RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
+SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
 MD5 27ce6b31ec162ebfe0b4c4d25b28b434 files/digest-sg3_utils-1.11 464
 RMD160 99ff3dedd7d71d6ca69d6a5d9bcc497759026494 files/digest-sg3_utils-1.11 464
 SHA256 eff639c3047e6e9577d753f638d21575ce63356304d8a3d855bbdf0dc3469f3d files/digest-sg3_utils-1.11 464
 MD5 959bec115dc319fb0d571715dd9fa6fd files/digest-sg3_utils-1.21 464
 RMD160 ac809b2defd0016d25b51451700952ce08ad5d82 files/digest-sg3_utils-1.21 464
 SHA256 37b3d3622801edebd91900a85d9ecc7a892a36beee0a6bcfb8a3fc1c184131b8 files/digest-sg3_utils-1.21 464
+MD5 b64a702c50c44ee8b85e5c15ce906dd2 files/digest-sg3_utils-1.22 464
+RMD160 8e4dd21990b8169c0b6ea95c465dc1ab029fa705 files/digest-sg3_utils-1.22 464
+SHA256 9ef545c2749f20b171b25fb10b502e8872e0fd393ceb78e0e1c5197823852c43 files/digest-sg3_utils-1.22 464
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5-ecc0.1.6 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFFJXTaKRy60XGEcJIRAjROAJ0REdP80QxSG8yQj1xclE2THJQCgQCfehN8
-Ws4iFvRRShD1Bz0YAyiVaY8=
-=ExmA
+iD8DBQFFPYrpamhnQswr0vIRAqmuAJ9xCtz9p7V2ahFvPMPbBjvj4QEFZQCfSQFQ
+JqCrbkZ1QSIlrpNFZy8AD+k=
+=6IGY
 -----END PGP SIGNATURE-----
