@@ -1,0 +1,6 @@
+MD5 c134b452644dfaa3b5d7b6721492963a rescan-scsi-bus.sh 5884
+RMD160 3ca6340b1299fe15fa96484d6db5ea0232292aba rescan-scsi-bus.sh 5884
+SHA256 14bb8550a240f5eea8047a449dc8f3c33544f45ecc83c6cbcaf7c7ff5c1227d1 rescan-scsi-bus.sh 5884
+MD5 1ac06935f3bf75332b3cbed0785d059a sg3_utils-1.22.tgz 505941
+RMD160 15f3a0eea95270d1a4ea96803bd3d5f2dd3da936 sg3_utils-1.22.tgz 505941
+SHA256 9139435537fb1c77454301bc173407d56907ecbbbb3c75bc2c13fbd2438a7f22 sg3_utils-1.22.tgz 505941
